# kaggle_house_price_pred_comp

./: README.md  pyproject.toml
data/final/: fin_test.pkl  fin_train.pkl
data/processed/: pro_test.pkl  pro_train.pkl
models/base/: gbr_best_model.pkl
models/tuned/: gbr_tuned_model.pkl
notebooks/: 01_preprocess.ipynb  02_exploration.ipynb  03_feature_engineering.ipynb  04_modelling.ipynb
output/: base_gbr_results.csv  blended_results.csv  gbr_results.csv  stacked_results.csv  tuned_gbr_results.csv
