[tool.poetry]
name = "house-prices-adv-reg"
version = "0.1.0"
description = "Kaggle competition to predict house prices using advanced linear regression methods"
authors = ["chonalchendo <110059232+chonalchendo@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.1"
ipykernel = "^6.29.3"
matplotlib = "^3.8.3"
seaborn = "^0.13.2"
numpy = "^1.26.4"
dython = "^0.7.5"
statsmodels = "^0.14.1"
xgboost = "^2.0.3"
category-encoders = "^2.6.3"
rich = "^13.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
